--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers = 
     positive: Tests that should pass with valid inputs
     negative: Tests that should fail with invalid inputs
+bdd_features_base_dir = tests/features
