--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -35,6 +35,15 @@ jobs:
                   .\.venv\Scripts\activate
                   pytest -v --browser=chrome --headless=true -n 8 --alluredir=allure-results
 
+            - name: Install Allure CLI
+              run: |
+                curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/latest/download/allure-commandline.zip
+                unzip allure.zip -d allure
+                echo "$(pwd)/allure/bin" >> $GITHUB_PATH
+
+            - name: Verify Allure Installation
+              run: allure --version
+
             - name: Generate Allure Report
               run: allure generate allure-results -o allure-report --clean
 
