Updated .gitignore and requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 tests/__pycache__
 tests/page_objects/__pycache__
 tests/steps/__pycache__
+tests/test_utilities/__pycache__
 reports/
 allure-report/
 allure-results/
 assets/
 report.html
 test_cases.txt
+clickup_utils
