--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -35,8 +35,11 @@ jobs:
                   .\.venv\Scripts\activate
                   pytest -v --browser=chrome --headless=true -n 8 --alluredir=allure-results
 
-            - name: Install Allure CLI on Windows
-              run: choco install allure --no-progress
+            - name: Install Allure CLI manually
+              run: |
+                  curl -L -o allure.zip https://github.com/allure-framework/allure2/releases/download/2.34.1/allure-2.34.1.zip
+                  tar -xf allure.zip
+                  echo "${{ github.workspace }}/allure-2.34.1/bin" >> $GITHUB_PATH
 
             - name: Verify Allure Installation
               run: allure --version
