--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -36,11 +36,11 @@ jobs:
                   pytest -v --browser=chrome --headless=true -n 8 --alluredir=allure-results
 
             - name: Generate Allure Report
-              uses: allure-actions/allure-report@v3
+              uses: simple-elf/allure-report-action@v1
               with:
-                  results_dir: allure-results
-                  report_dir: allure-report
-                  clean: true
+                  allure_results: allure-results
+                  allure_report: allure-report
+                  allure_server: false
 
             - name: Upload Allure Report
               uses: actions/upload-artifact@v4
