--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -47,6 +47,9 @@ jobs:
             - name: Generate Allure Report
               run: allure generate allure-results -o allure-report --clean
 
+            - name: List Allure Report Directory
+              run: dir allure-report
+
             - name: Upload Allure Report
               uses: actions/upload-artifact@v4
               with:
