--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -32,6 +32,7 @@ jobs:
                   choco install chromedriver
 
             - name: Run Selenium Tests with Pytest
+              continue-on-error: true
               run: |
                   .\.venv\Scripts\activate
                   pytest -v --browser=chrome --headless=true -n 8 --alluredir=allure-results
